--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section with Responsive Navbar -->
     <header>
       <nav class="navbar">
-        <div class="logo">Vephla Uni</div>
+        <div class="logo">Alex</div>
         <div class="burger" onclick="toggleNav()">&#9776;</div>
         <ul class="nav-links" id="navLinks">
           <li><a href="#home">Home</a></li>
